[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-vram-scheduler"
version = "1.0.0"
description = "VRAM Scheduling Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",  # MANDATORY dependency added here
    "fastapi",
    "uvicorn",
    "gymnasium",
    "numpy",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:app"  # MANDATORY entry point added here
